# tileeditor

./: CMakeLists.txt  README.md  command.h  editor.cpp  editor.h  editorUI-dark.fl  editorUI.cpp  editorUI.fl  editorUI.h  editorUI.txt  gameobject.h  gl_render.cpp  gl_render.h  global.cpp  global.h  layer.cpp  layer.h  level.cpp  level.h  loader.cpp  loader.h  main.cpp  sprite.cpp  sprite.h  texture.cpp  texture.h  tilesetUI.cpp  tilesetUI.h
samples/: demo01.json  gameobject.json  gameobjects.json  level.json  level.map  level2.json  output.json  output2.json  output3.json  output5.json  testSave.json
